--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.webapi</groupId>
     <artifactId>myapi</artifactId>
     <version>0.0.1</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>myapi</name>
     <description>myapi</description>
     <properties>
